fix typos and replace Arrays.asList with List.of